rust/codec-script/src/snapshots/decode_and_encode_articles@README.sh-2.snap
---
source: rust/codec-script/src/lib.rs
assertion_line: 233
expression: script
input_file: fixtures/articles/scripts/README.sh
---
# These are examples of writing articles using programming language scripts (like this one)
# 
# Comments are parsed as Markdown and can have all the normal Markdown syntax, including Stencila extensions. Code is parsed into code chunks.

NOW=$(date)

# You can use variables in expressions within Markdown comments e.g. `$NOW`{bash exec}.

