rust/codec-script/src/snapshots/decode_and_encode_articles@script.py-2.snap
---
source: rust/codec-script/src/lib.rs
assertion_line: 233
expression: script
input_file: fixtures/articles/scripts/script.py
---
# First paragraph, followed by some code

a = 1

# Second paragraph, with a code expression that uses the above code `a*2`{py exec}, followed by some more code, this time multiline,

b = 2

def fn1(x):
    x * x

# A multiline comment with a paragraph.
# 
# > And a quote block
# 
# And a list,
# 
# 1. One
# 2. Two
# 3. Three

c = 3

