rust/codec-script/src/snapshots/decode_and_encode_articles@script.py.snap
---
source: rust/codec-script/src/lib.rs
assertion_line: 59
expression: article
input_file: fixtures/articles/scripts/script.py
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        "First paragraph, followed by some code"
      ]
    },
    {
      "type": "CodeChunk",
      "code": "a = 1",
      "programmingLanguage": "python"
    },
    {
      "type": "Paragraph",
      "content": [
        "Second paragraph, with a code expression that uses the above code ",
        {
          "type": "CodeExpression",
          "code": "a*2",
          "programmingLanguage": "py"
        },
        ", followed by some more code, this time multiline,"
      ]
    },
    {
      "type": "CodeChunk",
      "code": "b = 2\n\ndef fn1(x):\n    x * x",
      "programmingLanguage": "python"
    },
    {
      "type": "Paragraph",
      "content": [
        "A multiline comment with a paragraph."
      ]
    },
    {
      "type": "QuoteBlock",
      "content": [
        {
          "type": "Paragraph",
          "content": [
            "And a quote block"
          ]
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        "And a list,"
      ]
    },
    {
      "type": "List",
      "items": [
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "One"
              ]
            }
          ]
        },
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "Two"
              ]
            }
          ]
        },
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "Three"
              ]
            }
          ]
        }
      ],
      "order": "Ascending"
    },
    {
      "type": "CodeChunk",
      "code": "c = 3",
      "programmingLanguage": "python"
    },
    {
      "type": "Paragraph",
      "content": [
        "Parameters can be included in Markdown, and will be encoded as script variables immediately after they are declared."
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        "Parameter d: ",
        {
          "type": "Parameter",
          "name": "d",
          "validator": {
            "type": "IntegerValidator"
          }
        }
      ]
    },
    {
      "type": "CodeChunk",
      "code": "print('a + b + c + d = %s' % (a + b + c + d))",
      "programmingLanguage": "python"
    }
  ]
}
