rust/codec-script/src/snapshots/decode_and_encode_articles@script.sql-2.snap
---
source: rust/codec-script/src/lib.rs
assertion_line: 352
expression: script
input_file: fixtures/articles/scripts/script.sql
---
-- First paragraph, followed by some code.

SELECT 1;

-- Second paragraph followed by some more code, this time multiline,

CREATE TABLE table_1(
    col_1 INT,
    col_2 TEXT
);

-- A multiline comment with a paragraph.
-- 
-- > And a quote block
-- 
-- And a list,
-- 
-- 1. One
-- 2. Two
-- 3. Three

SELECT * FROM table_1

-- Currently, unlike for other languages, document parameters are not supported in SQL scripts.

