rust/codec-script/src/snapshots/decode_and_encode_articles@script.sql.snap
---
source: rust/codec-script/src/lib.rs
assertion_line: 342
expression: article
input_file: fixtures/articles/scripts/script.sql
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        "First paragraph, followed by some code."
      ]
    },
    {
      "type": "CodeChunk",
      "programmingLanguage": "sql",
      "text": "SELECT 1;"
    },
    {
      "type": "Paragraph",
      "content": [
        "Second paragraph followed by some more code, this time multiline,"
      ]
    },
    {
      "type": "CodeChunk",
      "programmingLanguage": "sql",
      "text": "CREATE TABLE table_1(\n    col_1 INT,\n    col_2 TEXT\n);"
    },
    {
      "type": "Paragraph",
      "content": [
        "A multiline comment with a paragraph."
      ]
    },
    {
      "type": "QuoteBlock",
      "content": [
        {
          "type": "Paragraph",
          "content": [
            "And a quote block"
          ]
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        "And a list,"
      ]
    },
    {
      "type": "List",
      "items": [
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "One"
              ]
            }
          ]
        },
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "Two"
              ]
            }
          ]
        },
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "Three"
              ]
            }
          ]
        }
      ],
      "order": "Ascending"
    },
    {
      "type": "CodeChunk",
      "programmingLanguage": "sql",
      "text": "SELECT * FROM table_1"
    },
    {
      "type": "Paragraph",
      "content": [
        "Currently, unlike for other languages, document parameters are not supported in SQL scripts."
      ]
    }
  ]
}
