rust/codec-script/src/snapshots/decode_articles@script.R.snap
---
source: rust/codec-script/src/lib.rs
assertion_line: 158
expression: article
input_file: fixtures/articles/scripts/script.R
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        "First paragraph, followed by some code"
      ]
    },
    {
      "type": "CodeChunk",
      "programmingLanguage": "r",
      "text": "a <- 1\n"
    },
    {
      "type": "Paragraph",
      "content": [
        "Second paragraph, with a code expression that uses the above code ",
        {
          "type": "CodeExpression",
          "programmingLanguage": "r",
          "text": "a*2"
        },
        ", followed by some more code, this time multiline,"
      ]
    },
    {
      "type": "CodeChunk",
      "programmingLanguage": "r",
      "text": "b <- 2\n\nfn1 <- function {\n    x * x\n}\n"
    },
    {
      "type": "Paragraph",
      "content": [
        "A mutliline comment with a paragraph."
      ]
    },
    {
      "type": "QuoteBlock",
      "content": [
        {
          "type": "Paragraph",
          "content": [
            "And a quote block"
          ]
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        "And a list,"
      ]
    },
    {
      "type": "List",
      "items": [
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "One"
              ]
            }
          ]
        },
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "Two"
              ]
            }
          ]
        },
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "Three"
              ]
            }
          ]
        }
      ],
      "order": "Ascending"
    },
    {
      "type": "CodeChunk",
      "programmingLanguage": "r",
      "text": "c <- 3\n"
    }
  ]
}
