rust/codec-script/src/snapshots/decode_articles@script.py.snap
---
source: rust/codec-script/src/lib.rs
assertion_line: 158
expression: article
input_file: fixtures/articles/scripts/script.py
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        "First paragraph, followed by some code"
      ]
    },
    {
      "type": "CodeChunk",
      "programmingLanguage": "py",
      "text": "a = 1\n"
    },
    {
      "type": "Paragraph",
      "content": [
        "Second paragraph, with a code expression that uses the above code ",
        {
          "type": "CodeExpression",
          "programmingLanguage": "py",
          "text": "a*2"
        },
        ", followed by some more code, this time multiline,"
      ]
    },
    {
      "type": "CodeChunk",
      "programmingLanguage": "py",
      "text": "b = 2\n\ndef fn1(x):\n    x * x\n"
    },
    {
      "type": "Paragraph",
      "content": [
        "A mutliline comment with a paragraph."
      ]
    },
    {
      "type": "QuoteBlock",
      "content": [
        {
          "type": "Paragraph",
          "content": [
            "And a quote block"
          ]
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        "And a list,"
      ]
    },
    {
      "type": "List",
      "items": [
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "One"
              ]
            }
          ]
        },
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "Two"
              ]
            }
          ]
        },
        {
          "type": "ListItem",
          "content": [
            {
              "type": "Paragraph",
              "content": [
                "Three"
              ]
            }
          ]
        }
      ],
      "order": "Ascending"
    },
    {
      "type": "CodeChunk",
      "programmingLanguage": "py",
      "text": "c = 3\n"
    }
  ]
}
